// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: MovieCard render the component 1`] = `
<DocumentFragment>
  <div
    class="sc-iBPRYJ kFVXCq"
  >
    <div
      class="sc-fubCfw bkOPmg"
    >
      <div
        class="sc-pFZIQ gOxPkL"
      >
        :(
      </div>
      <p
        class="sc-jrAGrp fRHTJf"
      >
        Image not found
      </p>
    </div>
    <div
      class="sc-gKsewC pzKZi"
    >
      <div
        class="sc-hKgILt cfYQtU"
      >
        <img
          data-testid="set-as-fav"
          height="24"
          loading="lazy"
          src="test-file-stub"
          width="24"
        />
      </div>
      <div
        class="sc-gsTCUz"
      >
        <h2
          class="sc-eCssSg drdQJI"
        >
          Lorem
        </h2>
        <div
          class="sc-jSgupP cPrTxs"
        >
          2020
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[Component]: MovieCard render the component active with image 1`] = `
<DocumentFragment>
  <div
    class="sc-iBPRYJ kFVXCq"
  >
    <img
      alt="Lorem"
      class="sc-dlfnbm CUPlz"
      height="230"
      loading="lazy"
      src="https://images-na.ssl-images-amazon.com/images/I/A1IuOyoadxL._AC_SY550_.jpg"
      width="170"
    />
    <div
      class="sc-gKsewC gMrpCO"
    >
      <div
        class="sc-hKgILt cfYQtU"
      >
        <img
          data-testid="set-as-fav"
          height="24"
          loading="lazy"
          src="test-file-stub"
          width="24"
        />
      </div>
      <div
        class="sc-gsTCUz"
      >
        <h2
          class="sc-eCssSg drdQJI"
        >
          Lorem
        </h2>
        <div
          class="sc-jSgupP cPrTxs"
        >
          2020
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
